extract task invokeTarget opt